--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ share/python-wheels/
 MANIFEST
 .DS_Store
 runs/
+logs/
+fovean/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
